# CoWorkingTwitchBot

./: .gitignore  .replit  README.md  bot.py  botDatabase.py  keep_alive.py  pomo_logic.py  pyproject.toml
static/: pomoBard.css  pomoBoard.css
templates/: flipDict.json  index.html  pomoBoard.html
