[tool.poetry]
name = "CoWorkingTwitchBot"
version = "0.1.0"
description = ""
authors = ["CrankyBookworm"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
Flask = "^2.1.1"
python-dotenv = "^0.20.0"
replit = "^3.2.4"
twitchio = "^2.2.0"
self = "^2020.12.3"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"